--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <title>Laura's Bakery</title>
 </head>
 <body>
-    <p>Cookies - Baker's Dozen (13)</p>
+    <p>Welcome to Laura's Bakery!</p>
     <img class="cookies" src="biarritz.jpg" alt="Biarritz cookies">
-    <button id="checkout"></button>
+    <span>Biarritz Sandwich - Baker's Dozen (13)<span>
+    <button id="checkout">I want this!</button>
 </body>
 </html>
